<resources>
    <string name="app_name">Wallpaper Portal</string>
    <string name="flickr">Flickr</string>
    <string name="spotify">Spotify</string>
    <string name="nasa">NASA</string>
    <string name="nasa_image_view">nasa_image_view</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="apod_link"> Its a video today ! Click <a href="https://apod.nasa.gov/"> here </a> to go to the link</string>
    <string name="search_hashtags">Search Hashtags</string>
    <string name="shuffle">shuffle</string>
    <string name="failed">Invalid Tag, re-enter a new tag</string>
</resources>
